Kubernetes/backend-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace:  pnt-quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: quiz-lec-backend-container
        image: chronzon/quiz-lec-backend-go:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace:  pnt-quiz
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
